# miniscript-size-reproduce

./: Cargo.toml  README.md
src/: lib.rs
