[package]
name = "miniscript-size-reproduce"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.84"
bitcoin = "0.30.0"
miniscript = "10.0.0"
hex = "0.4.3"
